2004-05-26  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/dec_v1.c, src/munged/replay.c, src/munged/replay.h:
	  Fixed bug where decoded cred was marked as "played" even if the
	  rsp msg was not successfully delivered to the client {gnats:437}.

2004-05-13  Chris Dunlap  <cdunlap@llnl.gov>

	* : Re-bootstrap'd with automake-1.8.5.

2004-05-13  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/auth_policy.h, src/libmunge/auth_send.c,
	  src/libmunge/auth_send.h, src/libmunge/decode.c,
	  src/libmunge/encode.c, src/munged/auth_recv.c,
	  src/munged/auth_recv.h: Added AUTH_PIPE_NAME_PREFIX.
	  Changed return types of auth_send() and auth_recv().
	  Changed reporting of auth_send() and auth_recv() errors.

2004-05-06  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/conf.c, src/munged/munged.c: Moved auth_recv_init()
	  before gids_create() to allow for quicker exit when !root on aix.

	* src/munged/gids.c(gids_create): Allow errno == ENOENT to denote
	  success after last entry is returned by getgrent() for glibc-2.2.5.

2004-05-05  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_defs.h, src/libcommon/munge_msg.c,
	  src/libcommon/munge_msg.h, src/libmunge/decode.c,
	  src/libmunge/encode.c, src/munged/cred.h, src/munged/dec_v1.c,
	  src/munged/enc_v1.c, src/munged/msg_server.c:
	  Incremented MUNGE_MSG_VERSION.  Fixed segfault occurring when
          received message was smaller than its expected length {gnats:432}.

2004-04-30  Chris Dunlap  <cdunlap@llnl.gov>

	* : Released 0.3.

	* README, munge.spec: Updated description.

	* src/munge/munge.c, src/munged/gids.c: Tweaked includes for FreeBSD.
	* src/munge/munge.c, src/munged/zip.c: Minor tweaks for Solaris.

	* src/etc/Makefile.am: Replaced "/etc" with $(sysconfdir).

	* configure.ac: Added checks for standards.h, socklen_t, /dev/spx,
	  X_AC_CANONICAL, and X_AC_CHECK_FIFO_RECVFD.
	* config/x_ac_canonical.m4:
	  Added check to set the canonical host system type.
	* config/x_ac_check_fifo_recvfd.m4: