@@ -1,3 +1,7 @@
+2004-06-09  Chris Dunlap  <cdunlap@llnl.gov>
+
+	* src/libmunge/munge.h: Added support for C++.
+
 2004-05-26  Chris Dunlap  <cdunlap@llnl.gov>
 
 	* src/munged/dec_v1.c, src/munged/replay.c, src/munged/replay.h:
